--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
@@ -9,8 +9,14 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a> <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+        <a mat-list-item routerLink="/dashboard"><mat-icon color="primary">home</mat-icon>Home</a>
+        <a mat-list-item routerLink="resultSuccess">
+          <mat-icon color="primary">done</mat-icon>
+          Success</a>
+       <a mat-list-item routerLink="resultFailed"><mat-icon  color="primary">error</mat-icon>
+        Failed</a>
+
+      <a mat-list-item routerLink="about">About</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -24,61 +30,11 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>StankinsAliveAngular</span>
+      <span>
+        <a routerLink='dashboard'>Stankins Alive</a></span>
     </mat-toolbar>
     <!-- Add Content Here -->
-
-    Monitored items: {{ results.size }} ( {{ OK?.length}} / {{ Failed?.length}})
-
-    <mat-tab-group>
-      <mat-tab label="">
-          <ng-template mat-tab-label>
-              <mat-icon>done</mat-icon>
-              Success: {{ OK?.length}}
-            </ng-template>
-        <mat-accordion>
-          <ng-template ngFor let-ok [ngForOf]="OK" let-i="index">
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>{{ i + 1 }}) {{ ok.customData.name }}
-                    
-                </mat-panel-title>
-                <mat-panel-description>
-                  Last update :{{ ok.aliveResult.startedDate.toLocaleString() }} 
-                </mat-panel-description>
-              </mat-expansion-panel-header>
-              <div>To: {{ ok.aliveResult.to }}</div>
-              <div>Duration : {{ok.aliveResult.duration}} ms</div>
-              <div>DetailedResult: {{ok.aliveResult.detailedResult}}</div>              
-              <mat-action-row>
-                Tags:
-                <span *ngFor="let tag of ok.customData.tags"> {{ tag }}; </span>
-              </mat-action-row>
-            </mat-expansion-panel>
-          </ng-template>
-        </mat-accordion>
-      </mat-tab>
-      <mat-tab >
-          <ng-template mat-tab-label>
-              <mat-icon>error</mat-icon>
-              Failed: {{ Failed?.length}}
-            </ng-template>
-        <mat-accordion>
-          <ng-template ngFor let-ok [ngForOf]="Failed" let-i="index">
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  {{ i + 1 }} {{ ok.customData.name }}                  
-                </mat-panel-title>
-                <mat-panel-description>  Last update :{{ ok.aliveResult.startedDate.toLocaleString() }}  </mat-panel-description>
-              </mat-expansion-panel-header>
-              <div>To: {{ ok.aliveResult.to }}</div>
-              <div>Duration : {{ok.aliveResult.duration}} ms</div>
-              <div>Exception : {{ok.aliveResult.exception }}</div>
-            </mat-expansion-panel>
-          </ng-template>
-        </mat-accordion>
-      </mat-tab>
-    </mat-tab-group>
+    
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
