moniror next date

--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
@@ -20,6 +20,7 @@ Monitored items: {{ results.size }} ( {{ OK?.length }} / {{ Failed?.length }})
           <div>To: {{ ok.aliveResult.to }}</div>
           <div>Duration : {{ ok.aliveResult.duration }} ms</div>
           <div>DetailedResult: {{ ok.aliveResult.detailedResult }}</div>
+          <div>Next Run time UTC: {{ok.cronExecution.nextRunTime}}</div>
           <mat-action-row>
             Tags:
             <span *ngFor="let tag of ok.customData.tags">
@@ -49,6 +50,8 @@ Monitored items: {{ results.size }} ( {{ OK?.length }} / {{ Failed?.length }})
           <div>To: {{ ok.aliveResult.to }}</div>
           <div>Duration : {{ ok.aliveResult.duration }} ms</div>
           <div>Exception : {{ ok.aliveResult.exception }}</div>
+          <div>Next Run time UTC: {{ok.cronExecution.nextRunTime}}</div>
+        
         </mat-expansion-panel>
       </ng-template>
     </mat-accordion>
