--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
@@ -31,7 +31,9 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>
-        <a routerLink='dashboard'>Stankins Alive</a></span>
+        <a routerLink='dashboard'>Stankins Alive</a> <sup>
+          Last updated: {{lastDateUpdated}}</sup></span>
+       
     </mat-toolbar>
     <!-- Add Content Here -->
     
