--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -1,3 +1,7 @@
 <p>
   GitHub: <a href='https://github.com/ignatandrei/stankins'>https://github.com/ignatandrei/stankins</a>
 </p>
+<p>
+  Material icons list:
+  <a href='https://material.io/tools/icons/?style=baseline'>https://material.io/tools/icons/?style=baseline</a>
+</p>
