--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
-Monitored items: {{ results.size }} ( {{ OK?.length }} ok / {{ Failed?.length }} failed)
+Monitored items: <span [innerHTML]="results.size  | numberToImg"></span> 
+
 
 <mat-tab-group>
   <mat-tab label="">
     <ng-template mat-tab-label>
       <mat-icon color="primary">done</mat-icon>
-      Success: {{ OK?.length }}
+      Success: <span [innerHTML]="OK?.length | numberToImg"></span> 
     </ng-template>
     <mat-accordion>
       <ng-template ngFor let-ok [ngForOf]="OK" let-i="index">
@@ -24,7 +25,7 @@ Monitored items: {{ results.size }} ( {{ OK?.length }} ok / {{ Failed?.length }}
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon>error</mat-icon>
-      Failed: {{ Failed?.length }}
+      Failed: <span style="background-color: red" [innerHTML]="Failed?.length | numberToImg"></span>
     </ng-template>
     <mat-accordion>
       <ng-template ngFor let-ok [ngForOf]="Failed" let-i="index">
