--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.css
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.css
@@ -15,3 +15,12 @@
   top: 0;
   z-index: 1;
 }
+.example-viewport {
+  height: 200px;
+  
+  border: 1px solid black;
+}
+
+.example-item {
+  height: 50px;
+}
