added library version

--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -5,3 +5,6 @@
   Material icons list:
   <a href='https://material.io/tools/icons/?style=baseline'>https://material.io/tools/icons/?style=baseline</a>
 </p>
+a
+<vers-versions></vers-versions>
+b
