now improved looking of packages

--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -6,4 +6,4 @@
   <a href='https://material.io/tools/icons/?style=baseline'>https://material.io/tools/icons/?style=baseline</a>
 </p>
 
-<vers-versions></vers-versions>
+<vers-versions-netcore-angular></vers-versions-netcore-angular>
