--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -5,5 +5,5 @@
   Material icons list:
   <a href='https://material.io/tools/icons/?style=baseline'>https://material.io/tools/icons/?style=baseline</a>
 </p>
-
+<p>Live demo: <a href="https://azurestankins.azurewebsites.net" target="_blank" >https://azurestankins.azurewebsites.net</a></p>
 <vers-versions-netcore-angular></vers-versions-netcore-angular>
