--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -6,4 +6,12 @@
   <a href='https://material.io/tools/icons/?style=baseline'>https://material.io/tools/icons/?style=baseline</a>
 </p>
 <p>Live demo: <a href="https://azurestankins.azurewebsites.net" target="_blank" >https://azurestankins.azurewebsites.net</a></p>
+
+<a href='https://azurestankins.azurewebsites.net/swagger'>Live swagger</a>
+
+
+<h1> Current settings</h1>
+
+
+
 <vers-versions-netcore-angular></vers-versions-netcore-angular>
