--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/projects/versions-netcore-angular/src/lib/versions-netcore-angular.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/projects/versions-netcore-angular/src/lib/versions-netcore-angular.component.html
@@ -3,9 +3,9 @@
   </p>
 
   <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input matInput (keyup)="applyFilterNET($event.target.value)" placeholder="Filter">
   </mat-form-field> 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSourceNET" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="internalName" sticky>
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let element" matTooltip={{element.fileName}}> 
@@ -22,10 +22,37 @@
       <ng-container matColumnDef="AllInfo">
         <th mat-header-cell *matHeaderCellDef >  </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-raised-button (click)="infoElement(element)">Show Info</button>
+            <button mat-raised-button (click)="infoElementNET(element)">Show Info</button>
         </td>
       </ng-container>
       
-      <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsNET;sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsNET;"></tr>
 </table>
+
+NPM Versions:
+<mat-form-field>
+  <input matInput (keyup)="applyFilterNPM($event.target.value)" placeholder="Filter">
+</mat-form-field> 
+<table mat-table [dataSource]="dataSourceNPM" matSort class="mat-elevation-z8">
+  <ng-container matColumnDef="name" sticky>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let element" matTooltip={{element.name}}> 
+        {{element.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="version">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> fileVersion </th>
+      <td mat-cell *matCellDef="let element"> {{element.fileVersion}} </td>
+    </ng-container>
+    <ng-container matColumnDef="AllInfo">
+      <th mat-header-cell *matHeaderCellDef >  </th>
+      <td mat-cell *matCellDef="let element">
+          <button mat-raised-button (click)="infoElementNPM(element)">Show Info</button>
+      </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsNPM;sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsNPM;"></tr>
+</table>
+
+
