--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -12,6 +12,6 @@
 
 <h1> Current settings</h1>
 
-
+<dsh-dashboard-simple></dsh-dashboard-simple>
 
 <vers-versions-netcore-angular></vers-versions-netcore-angular>
