--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/about/about.component.html
@@ -9,7 +9,7 @@
 
 <a href='https://azurestankins.azurewebsites.net/swagger'>Live swagger</a>
 
-
+<div *ngIf="columnsToDisplay.length>0">
 <table mat-table
        [dataSource]="dataSource" multiTemplateDataRows
        class="mat-elevation-z8">
@@ -19,7 +19,7 @@
         <mat-card class="example-card">
             <mat-card-header>
               <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>{{element[column]}}</mat-card-title>
+              <mat-card-title>{{element[column].CustomData.Name}}</mat-card-title>
               <mat-card-subtitle>Dog Breed</mat-card-subtitle>
             </mat-card-header>
             TEXT
@@ -38,24 +38,7 @@
       {{element[column]}} </td>
   </ng-container>
 
-  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.position}} </div>
-          <div class="example-element-symbol"> {{element.symbol}} </div>
-          <div class="example-element-name"> {{element.name}} </div>
-          <div class="example-element-weight"> {{element.weight}} </div>
-        </div>
-        <div class="example-element-description">
-          {{element.description}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div>
-      </div>
-    </td>
-  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
@@ -63,8 +46,9 @@
       [class.example-expanded-row]="expandedElement === element"
       (click)="expandedElement = expandedElement === element ? null : element">
   </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
 </table>
+</div>
 
 <h1> Current settings</h1>
 
