--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/monitor-nav/monitor-nav.component.html
@@ -24,6 +24,7 @@
           </cdk-virtual-scroll-viewport>
        
       <a mat-list-item routerLink="about">About</a>
+      <a mat-list-item routerLink="monitorData">MonitorData</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
