--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/what-monitor/what-monitor.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/what-monitor/what-monitor.component.html
@@ -3,15 +3,15 @@
          [dataSource]="dataSource" multiTemplateDataRows
          class="mat-elevation-z8">
     <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-      <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> 
-          <mat-card class="example-card" *ngIf="element[column]!=null">
+      <th mat-header-cell *matHeaderCellDef [style.background-color]='"#0000ff"'><h1>  {{friendlyName(column)}}</h1> </th>
+      <td mat-cell *matCellDef="let element" [style.background-color]='"#0000ff"' > 
+          <mat-card class="example-card" *ngIf="element[column]!=null" >
               <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
                 <mat-card-title>{{element[column].CustomData.Name}}</mat-card-title>
                 <mat-card-subtitle>{{element[column].Data.CRON}}</mat-card-subtitle>
               </mat-card-header>
-              Properties:
+              <b>Properties:</b>
               <mat-card-content>
                 
                   <div *ngFor="let item of element[column].Data | keyvalue">
@@ -23,8 +23,9 @@
                 
               </mat-card-content>
               <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
+
+                <button mat-button></button>
+                <button mat-button>Delete</button>
               </mat-card-actions>
             </mat-card>
          </td>
@@ -32,7 +33,7 @@
   
   
   
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay" ></tr>
     <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
         class="example-element-row"
         [class.example-expanded-row]="expandedElement === element"
