--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/src/app/dashboard/dashboard.component.html
@@ -7,40 +7,60 @@ Monitored items: <span [innerHTML]="results.size  | numberToImg"></span>
       <mat-icon color="primary">done</mat-icon>
       Success: <span [innerHTML]="OK?.length | numberToImg"></span> 
     </ng-template>
-    <mat-accordion>
-      <ng-template ngFor let-ok [ngForOf]="OK" let-i="index">
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>{{ i + 1 }}) <mat-icon  color="primary">{{ ok.customData.icon}}</mat-icon> {{ ok.customData.name }}  
-            </mat-panel-title>
-            <mat-panel-description>
-              Last update :{{ ok.aliveResult.startedDate.toLocaleString() }}
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <app-show-item [item]="ok"></app-show-item>
-        </mat-expansion-panel>
-      </ng-template>
-    </mat-accordion>
+    <div *ngIf="OKColumns?.length>0">
+        <table mat-table
+               [dataSource]="OKRows" multiTemplateDataRows
+               class="mat-elevation-z8">
+          <ng-container matColumnDef="{{column}}" *ngFor="let column of OKColumns">
+            <th mat-header-cell *matHeaderCellDef [style.background-color]='"#0000ff"'><h1>  {{friendlyName(column)}}</h1> </th>
+            <td mat-cell *matCellDef="let element" [style.background-color]='"#0000ff"' > 
+                <div *ngIf="element[column] != null">
+                <app-show-item [item]="element[column]"></app-show-item>
+              </div>
+               </td>
+          </ng-container>
+        
+        
+        
+          <tr mat-header-row *matHeaderRowDef="OKColumns" ></tr>
+          <tr mat-row *matRowDef="let element; columns: OKColumns;"
+              class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element"
+              (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+        
+        </table>
+        </div>
   </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon>error</mat-icon>
       Failed: <span style="background-color: red" [innerHTML]="Failed?.length | numberToImg"></span>
     </ng-template>
-    <mat-accordion>
-      <ng-template ngFor let-ok [ngForOf]="Failed" let-i="index">
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              {{ i + 1 }} <mat-icon  color="primary">{{ ok.customData.icon}}</mat-icon> {{ ok.customData.name }}  
-            </mat-panel-title>
-            <mat-panel-description>
-              Last update :{{ ok.aliveResult.startedDate.toLocaleString() }}
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <app-show-item [item]="ok"></app-show-item>
-        </mat-expansion-panel>
-      </ng-template>
-    </mat-accordion>
+    
+    <div *ngIf="FailedColumns?.length>0">
+        <table mat-table
+               [dataSource]="FailedRows" multiTemplateDataRows
+               class="mat-elevation-z8">
+          <ng-container matColumnDef="{{column}}" *ngFor="let column of FailedColumns">
+            <th mat-header-cell *matHeaderCellDef [style.background-color]='"red"'><h1>  {{friendlyName(column)}}</h1> </th>
+            <td mat-cell *matCellDef="let element" [style.background-color]='"red"' > 
+                <div *ngIf="element[column] != null">
+                <app-show-item [item]="element[column]"></app-show-item>
+              </div>
+               </td>
+          </ng-container>
+        
+        
+        
+          <tr mat-header-row *matHeaderRowDef="FailedColumns" ></tr>
+          <tr mat-row *matRowDef="let element; columns: FailedColumns;"
+              class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element"
+              (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+        
+        </table>
+        </div>
   </mat-tab>
 </mat-tab-group>
