exporting diagram to text documentation

--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/erdotviz.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/erdotviz.cshtml
@@ -57,7 +57,7 @@
             @Raw("[label =<" + nl);
 
             <table border="0" cellborder="1" cellspacing="0">
-                <tr><td><i>@table["name"]</i></td></tr>
+                <tr><td><em>@table["name"]</em></td></tr>
                 @foreach (DataRow col in columns.Rows)
                 {
                     if (col["tableId"].ToString() != idTable)
