no writing files

--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/erdotviz.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/erdotviz.cshtml
@@ -64,7 +64,7 @@
                     {
                         continue;
                     }
-                    <tr><td port='@col["id"]'>@col["name"]</td></tr>
+                    <tr><td port='@col["id"]' href='#@idNode' >@col["name"]</td></tr>
                 }
             </table>
 
