--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
@@ -8,6 +8,7 @@
     var columns = Model.FindAfterName("columns").Value;
     var relations = Model.FindAfterName("relations").Value;
     var nl = Environment.NewLine;
+    var iTable = 0;
 
 }
 <div></div>
@@ -17,6 +18,7 @@
 
     <table border="1">
         <tr>
+            <td>Number</td>
             <td>Name</td>
 
             <td>Relations</td>
@@ -24,24 +26,25 @@
         </tr>
 
         @foreach (DataRow table in tables.Rows)
-    {
-        var idTable = table["id"].ToString();
-        var idNode = string.Format("table{0}", idTable);
+        {
+            iTable++;
+            var idTable = table["id"].ToString();
+            var idNode = string.Format("table{0}", idTable);
 
-         var relation = "";
-        bool existRelation = false;
-
+            var relation = "";
+            bool existRelation = false;
+            var iRel = 0;
             foreach (DataRow rel in relations.Rows)
             {
                 if (rel["parent_object_id"].ToString() != idTable && rel["referenced_object_id"].ToString() != idTable)
                 {
                     continue;
                 }
-
+                iRel++;
                 existRelation = true;
                 var idTableRelated= int.Parse(rel["parent_object_id"].ToString())+int.Parse(rel["referenced_object_id"].ToString()) -int.Parse( idTable);
                 var nameRelated= tables.Select("id="+idTableRelated)[0]["name"];
-                relation +=string.Format("<a href='#table{0}'>{1}</a>;<br />",idTableRelated,nameRelated);
+                relation +=string.Format("{2})<a href='#table{0}'>{1}</a>;<br />",idTableRelated,nameRelated, iRel);
 
 
 
@@ -50,18 +53,19 @@
             {
                 relation = "-";
             }
-        <tr>
-            <td><a href="#@idNode"> @table["name"]</a></td>
-            <td>@Raw(relation)</td>
-            <td>This is used for </td>
-        </tr>
+            <tr>
+                <td>@iTable</td>
+                <td><a href="#@idNode"> @table["name"]</a></td>
+                <td>@Raw(relation)</td>
+                <td>This is used for </td>
+            </tr>
     }
     </table>
     <br />
 
         foreach (DataRow table in tables.Rows)
         {
-
+            var iColumn = 0;
             var idTable = table["id"].ToString();
             var idNode = string.Format("table{0}", idTable);
 
@@ -73,13 +77,14 @@
     <table border="1" cellborder="1" cellspacing="0">
 
         @foreach (DataRow col in columns.Rows)
-                {
-                    if (col["tableId"].ToString() != idTable)
-                    {
-                        continue;
-                    }
-        <tr><td port='@col["id"]'>@col["name"]</td><td>The field @col["name"] is used for </td></tr>
-                }
+        {
+            iColumn++;
+            if (col["tableId"].ToString() != idTable)
+            {
+                continue;
+            }
+            <tr><td>@iColumn</td><td port='@col["id"]'>@col["name"]</td><td>The field @col["name"] is used for </td></tr>
+        }
     </table>
 
     <br />
